# clipbd_template

./: .gitignore  400x Faster Embeddings!  - Static & Distilled Embedding Models [Lh4xfj9Xnzk].en.srt  CLAUDE.md  README.md  amdgpu-install_6.2.60201-1_all.deb  cache.py  ck_clipboard.py  clipbd.py  command.py  config.py  content.html  copykitten_util.py  copyq.py  datatype.py  dunstify.py  exceptions.py  extract_article.py  firecrawl_to_md.py  html_to_md.py  jina_to_md.py  llm.py  main.py  medium.html  medium.py  meta_prompt.py  notification_dunstify.py  prompt.py  pyproject.toml  q_and_a.py  release.sh  scraping.py  setup.py  template.yaml  template_paste.py  template_paste.spec  test.ipynb  test.md  test.py  test.sh  text_info.py  (+7 more)
.serena/: project.yml
asset/: Claude Code best practices | Code with Claude.srt  docs-pandoc.md  docs.html  docs.md  input.html  ko.md  merge_transcripts.py  openai_api_docs.md  prompt.txt  rag.yaml  reformat_transcript.py  result.md  template2.yaml  test.md  text.txt  transcript_en.txt  transcript_ko.srt  transcript_ko.txt  transcript_merged.txt  transcript_to_srt.py
docs/: ANALYSIS_REPORT.md  API.md  IMPROVEMENT_SUMMARY.md  NUITKA_BUILD.md  NUITKA_SETUP.md  PROJECT_INDEX.md  README.md  TEMPLATES.md
ng/: clipbd.py  firecrawl_to_md.py  get_browser_url.py  get_browser_url_advanced.py  get_url_from_broswer.sh  jina_to_md.py  medium.py  readerlm-v2.ipynb  scraping.py  web_to_md.py
prompt/: fact_checking-test.md  json_prompt.md
refactor/: COMPLETION_REPORT.md  plan.md  state.json
src/: __init__.py  cache.py  command.py  config.py  llm.py  (+7 more)
(+16 files in other folders)
