[project]
name = "clipbd-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.0.0",
    "pyinstaller>=6.15.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "youtube-transcript-api>=1.2.2",
]
